<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item android:id="@+id/nav_admin_profile"
        android:title="@string/nav_admin_profile"
        android:icon="@drawable/ic_baseline_menu_24"
        />
    <item android:id="@+id/nav_add_article"
        android:title="@string/nav_add_article"
        android:icon="@drawable/ic_baseline_menu_24"
        />
    <item android:id="@+id/nav_add_slider"
        android:title="@string/nav_add_slider"
        android:icon="@drawable/ic_baseline_menu_24"
        />
    <item android:id="@+id/nav_approve_list"
        android:title="@string/nav_approve_list"
        android:icon="@drawable/ic_baseline_menu_24"
        />
    <item android:id="@+id/nav_pending_list"
        android:title="@string/nav_pending_list"
        android:icon="@drawable/ic_baseline_menu_24"
        />
    <item android:id="@+id/nav_reject_list"
        android:title="@string/nav_reject_list"
        android:icon="@drawable/ic_baseline_menu_24"
        />
</group>
</menu>